P3/test/pl0/error/error10.pl0
var a,b;

begin
	a:=1
	if a<1 then
	a:=1;
end.
